# simple-store

./: Changelog.md  LICENSE  README.md  cabal.config  circle.yml  simple-cell.cabal  simple-store.cabal
bench/: Main.hs
mem-test/: MemSpec.hs  MemSpec.hs~
src/: SimpleStore.hs
src/SimpleStore/: Cell.hs  FileIO.hs  IO.hs  Internal.hs  Types.hs
src/SimpleStore/Cell/: Internal.hs
test/: SimpleStoreSpec.hs
test/SimpleStore/: CellSpec.hs
