Name:                   simple-cell
Version:                0.1.0
Author:                 Scott <scott.murphy@plowtech.net>
Maintainer:             Scott <scott.murphy@plowtech.net>
License:                BSD3
License-File:           LICENSE
Synopsis:               Simple Store wrapper for keyed States see Readme.md for details 
Description:            handles the next level up the simple store stack... batch stuff
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      SimpleStore.Cell
  Other-Modules:        SimpleStore.Cell.Internal
  Build-Depends:        base >= 4 && < 5
                      , text >= 1.1.0.1 
                      , system-filepath >= 0.4.10
                      , system-fileio >= 0.3.12
                      , mtl >= 2.1.3.1
                      , stm >= 2.4.3
                      , basic-prelude
                      , cereal >= 0.4.0.1
                      , safecopy == 0.8.3
                      , acid-state == 0.12.2.7569
                      , containers >= 0.5.0.0
                      , bytestring >= 0.10.0.2
                      , directed-keys >= 0.2.1
                      , async >= 2
                      , template-haskell

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , mtl
                      , template-haskell
                      , cereal 
                      , lens
                      , text >= 1.1.0.1
                      , hspec
                      , safecopy
                      , acid-state 
                      , containers
                      , bytestring
                      , basic-prelude
                      , directed-keys
                      , system-fileio 
                      , stm
                      , system-filepath


Source-Repository head
  Type:                 git
  Location:             https://github.com/plow-technologies/simple-store.git
