Name:                   simple-store
Version:                0.1.1
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               An atomic, durable, and transactional data store 
Description:            An atomic, durable, and transactional data store 
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      SimpleStore
  Other-Modules:        SimpleStore.Internal
                      , SimpleStore.Types
                      , SimpleStore.IO
                      , SimpleStore.FileIO
  Build-Depends:        base >= 4 && < 5
                      , stm
                      , system-fileio
                      , system-filepath
                      , cereal
                      , bytestring
                      , unix
                      , text >= 1.1 && < 1.2
                      , safe
                      , bifunctors
                      , time

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , stm
                      , system-fileio
                      , system-filepath
                      , cereal
                      , bytestring
                      , unix
                      , text
                      , safe
                      , bifunctors
                      , time
                      , async

benchmark simple-store-bench
  type:                   exitcode-stdio-1.0
  Hs-Source-Dirs:         bench
  main-is:                Main.hs
  build-depends:          base
                      , hspec
                      , stm
                      , system-fileio
                      , system-filepath
                      , cereal
                      , bytestring
                      , unix
                      , text
                      , safe
                      , bifunctors
                      , time
                      , async
                      , simple-store
                      , random
                      , basic-prelude
  ghc-options:      -O2 -prof -auto-all -caf-all -osuf p_o -hisuf p_hi

Source-Repository head 
  Type:                 git
  Location:             git@github.com:plow-technologies/simple-store.git
            
